Fix artifact path in GitHub Actions workflow

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,4 +44,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: ${{ matrix.platform.os-name }}
-          path: targets/release/${{ matrix.platform.output-file }}
+          path: target/release/${{ matrix.platform.output-file }}
