--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,6 +41,13 @@ jobs:
           target: ${{ matrix.platform.target }}
       - name: Build library
         run: "cargo build --release --target ${{ matrix.platform.target }}"
+      - name: List files
+        run: "find -type f > list.txt"
+      - name: capture file list
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.platform.os-name }} file list
+          path: list.txt
       - name: capture build artifacts
         uses: actions/upload-artifact@v4
         with:
