--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,27 +6,27 @@ jobs:
     strategy:
       matrix:
         platform:
-          - os-name: Linux-x86_64
+          - os-name: linux-x86_64
             runs-on: ubuntu-24.04
             target: x86_64-unknown-linux-gnu
             output-file: libaudio_navigation_tts.so
-          - os-name: Linux-aarch64
+          - os-name: linux-aarch64
             runs-on: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
             output-file: libaudio_navigation_tts.so
-          - os-name: Windows-x86_64
+          - os-name: windows-x86_64
             runs-on: windows-2025
             target: x86_64-pc-windows-msvc
             output-file: audio_navigation_tts.dll
-          - os-name: Windows-aarch64
+          - os-name: windows-aarch64
             runs-on: windows-2025
             target: aarch64-pc-windows-msvc
             output-file: audio_navigation_tts.dll
-          - os-name: macOS-x86_64
+          - os-name: macos-x86_64
             runs-on: macOS-13
             target: x86_64-apple-darwin
             output-file: libaudio_navigation_tts.dylib
-          - os-name: macOS-aarch64
+          - os-name: macos-aarch64
             runs-on: macOS-15
             target: aarch64-apple-darwin
             output-file: libaudio_navigation_tts.dylib
