Switch Rust toolchain action

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -35,10 +35,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
       - name: Install Rust toolchain
-        uses: actions-rust-lang/setup-rust-toolchain@v1
+        uses: dtolnay/rust-toolchain@stable
         with:
-          cache: false
-          target: ${{ matrix.platform.target }}
+          targets: ${{ matrix.platform.target }}
       - name: Build library
         run: "cargo build --release --target ${{ matrix.platform.target }}"
       - name: capture build artifacts
