--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,11 @@
 [package]
 name = "audio-navigation-tts"
 version = "0.1.0"
+authors = ["Elijah Massey <emassey0135@gmail.com>"]
+description = "A JNI library to expose several TTS systems to the Audio Navigation Minecraft mod"
+homepage = "https://github.com/emassey0135/audio-navigation-tts"
+repository = "https://github.com/emassey0135/audio-navigation-tts"
+license = "GPL-3.0"
 edition = "2021"
 
 [dependencies]
