--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,12 @@ espeakng-sys = { git = "https://github.com/emassey0135/espeakng-sys.git", versio
 jni = "0.21.1"
 lazy_static = "1.5.0"
 
+[target.'cfg(target_os = "macos")'.dependencies]
+objc2 = "0.6.0"
+block2 = "0.6.0"
+objc2-foundation = { version = "0.3.0", default-features = false, features = ["std", "NSArray", "NSEnumerator", "NSString"] }
+objc2-avf-audio = { version = "0.3.0", default-features = false, features = ["AVAudioBuffer", "AVSpeechSynthesis", "block2", "objc2-core-audio-types", "std"] }
+
 [target.'cfg(windows)'.dependencies]
 sapi-lite = "0.1.1"
 windows = { version = "0.28", features = ["Win32_System_Com"] }
