--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ lazy_static = "1.5.0"
 objc2 = "0.6.0"
 block2 = "0.6.0"
 objc2-foundation = { version = "0.3.0", default-features = false, features = ["std", "NSArray", "NSEnumerator", "NSString"] }
-objc2-avf-audio = { version = "0.3.0", default-features = false, features = ["AVAudioBuffer", "AVSpeechSynthesis", "block2", "objc2-core-audio-types", "std"] }
+objc2-avf-audio = { version = "0.3.0", default-features = false, features = ["AVAudioBuffer", "AVAudioFormat", "AVSpeechSynthesis", "block2", "objc2-core-audio-types", "std"] }
 
 [target.'cfg(windows)'.dependencies]
 sapi-lite = "0.1.1"
