--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,9 +42,7 @@ jobs:
         run: "cargo build --release --target ${{ matrix.platform.target }}"
       - name: Install ALSA library and headers on Linux
         if: runner.os == 'Linux'
-          run: |
-            sudo apt-get update
-            sudo apt-get install -y libasound2-dev
+        run: sudo apt-get update && sudo apt-get install -y libasound2-dev
       - name: Capture build artifacts
         uses: actions/upload-artifact@v4
         with:
