--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ objc2-avf-audio = { version = "0.3.1", default-features = false, features = ["AV
 
 [target.'cfg(windows)'.dependencies]
 windows = { version = "0.61.1", features = ["Win32_Globalization", "Win32_Media_Speech", "Win32_System_Com", "Win32_System_SystemServices"] }
+quick-xml = "0.37.5"
 
 [lib]
 crate-type = ["cdylib", "lib"]
