--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ edition = "2021"
 espeakng-sys = { git = "https://github.com/emassey0135/espeakng-sys.git", version = "0.3.0", features = ["clang-runtime"] }
 jni = "0.21.1"
 lazy_static = "1.5.0"
-rodio = "0.20.1"
+rodio = { version = "0.20.1", default-features = false, features = ["wav", "hound"] }
 
 [target.'cfg(target_os = "macos")'.dependencies]
 objc2 = "0.6.1"
