--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,9 @@ jni = "0.21.1"
 lazy_static = "1.5.0"
 rodio = { version = "0.20.1", default-features = false, features = ["wav", "hound"] }
 
+[target.'cfg(target_os = "linux")'.dependencies]
+ssip-client-async = "0.15.0"
+
 [target.'cfg(target_os = "macos")'.dependencies]
 objc2 = "0.6.1"
 block2 = "0.6.1"
