--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,27 +9,27 @@ jobs:
           - os-name: linux-x86_64
             runs-on: ubuntu-24.04
             target: x86_64-unknown-linux-gnu
-            output-file: libaudio_navigation_tts.so
+            output-file: libwhisp_rs.so
           - os-name: linux-aarch64
             runs-on: ubuntu-24.04-arm
             target: aarch64-unknown-linux-gnu
-            output-file: libaudio_navigation_tts.so
+            output-file: libwhisp_rs.so
           - os-name: windows-x86_64
             runs-on: windows-2025
             target: x86_64-pc-windows-msvc
-            output-file: audio_navigation_tts.dll
+            output-file: whisp_rs.dll
           - os-name: windows-aarch64
             runs-on: windows-2025
             target: aarch64-pc-windows-msvc
-            output-file: audio_navigation_tts.dll
+            output-file: whisp_rs.dll
           - os-name: macos-x86_64
             runs-on: macOS-13
             target: x86_64-apple-darwin
-            output-file: libaudio_navigation_tts.dylib
+            output-file: libwhisp_rs.dylib
           - os-name: macos-aarch64
             runs-on: macOS-15
             target: aarch64-apple-darwin
-            output-file: libaudio_navigation_tts.dylib
+            output-file: libwhisp_rs.dylib
     runs-on: ${{ matrix.platform.runs-on }}
     steps:
       - name: Checkout repository
