--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ objc2-foundation = { version = "0.3.1", default-features = false, features = ["s
 objc2-avf-audio = { version = "0.3.1", default-features = false, features = ["AVAudioBuffer", "AVAudioFormat", "AVAudioTypes", "AVSpeechSynthesis", "block2", "objc2-core-audio-types", "std"] }
 
 [target.'cfg(windows)'.dependencies]
-windows = { version = "0.61.1", features = ["Media_Core", "Media_SpeechSynthesis", "Storage_Streams", "Win32_Globalization", "Win32_Media_Audio", "Win32_Media_Speech", "Win32_System_Com", "Win32_System_Ole", "Win32_System_SystemServices", "Win32_System_Variant", "Win32_System_WinRT", "Win32_UI_Shell"] }
+windows = { version = "0.61.1", features = ["Media_Core", "Media_SpeechSynthesis", "Storage_Streams", "Win32_Globalization", "Win32_Media_Audio", "Win32_Media_Speech", "Win32_System_Com", "Win32_System_Ole", "Win32_System_SystemServices", "Win32_System_Variant", "Win32_System_WinRT", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging"] }
 windows-core = "0.61.2"
 quick-xml = "0.37.5"
 
