Automatically generate C header file with cbindgen

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,4 +35,5 @@ crate-type = ["cdylib", "lib"]
 [build-dependencies]
 bindgen = "0.71.1"
 build-target = "0.4.0"
+cbindgen = "0.29.0"
 cc = "1.2.23"
